# bevy_svg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
examples/: complex_one_color.rs  twinkle.rs  two_colors.rs
examples/2d/: complex_one_color.rs  multiple_translation.rs  origin_check.rs  preloading.rs  twinkle.rs  two_colors.rs  two_colors_bytes.rs  two_colors_reader.rs  two_colors_visibility.rs
examples/3d/: complex_one_color.rs  multiple_perspective.rs  multiple_translation.rs  origin_check.rs  twinkle.rs  two_colors.rs  two_colors_visibility.rs
examples/common/: lib.rs
scripts/: build_examples.sh
src/: bundle.rs  lib.rs  loader.rs  origin.rs  plugin.rs  resources.rs  svg.rs  tessellation.rs  util.rs  utils.rs  vertex_buffer.rs
src/render/: mod.rs  pipeline.rs  pipeline_2d.rs  pipeline_3d.rs  plugin.rs  svg_2d.wgsl  svg_3d.wgsl  tessellation.rs  vertex_buffer.rs
src/render/svg2d/: bundle.rs  mod.rs  pipeline_2d.rs  plugin.rs  svg_2d.wgsl
src/render/svg3d/: bundle.rs  mod.rs  pipeline_3d.rs  plugin.rs  svg_3d.wgsl
src/svg/: fill.rs  mod.rs  serde_utils.rs  stroke.rs  svg.rs
