[package]
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "Load and draw simple SVG files in Bevy."
edition = "2018"
license = "Apache-2.0"
name = "bevy_svg"
readme = "README.md"
repository = "https://github.com/Weasy666/bevy_svg/"
version = "0.4.0"
keywords = ["gamedev", "graphics", "bevy", "svg"]
categories = ["Graphics", "Game engines", "Rendering"]
exclude = ["assets", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["render", "trace"] }

lyon_geom = "0.17"
lyon_svg = "0.17"
lyon_tessellation = "0.17"
usvg = "0.19"

anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
bevy = { version = "0.5", default-features = true }

#### 2D examples ####
[[example]]
name = "2d_two_colors"
path = "examples/2d/two_colors.rs"

[[example]]
name = "2d_two_colors_visibility"
path = "examples/2d/two_colors_visibility.rs"

[[example]]
name = "2d_twinkle"
path = "examples/2d/twinkle.rs"

[[example]]
name = "2d_complex_one_color"
path = "examples/2d/complex_one_color.rs"

#### 3D examples ####
[[example]]
name = "3d_two_colors"
path = "examples/3d/two_colors.rs"

[[example]]
name = "3d_two_colors_visibility"
path = "examples/3d/two_colors_visibility.rs"

[[example]]
name = "3d_twinkle"
path = "examples/3d/twinkle.rs"

[[example]]
name = "3d_complex_one_color"
path = "examples/3d/complex_one_color.rs"
